<resources>
    <string name="app_name">Foodee</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_timeline">Timeline</string>
    <string name="title_nearby">NearBy</string>
    <string name="title_profile">Profile</string>
    <string name="title_chat">Chat</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_notification_channel_id">4655</string>
    <string name="update_post">Edit Post</string>
    <string name="delete_post">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_new_home">NewHomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="_25">25%</string>
    <string name="my_contribution">My Contribution</string>
    <string name="select_ages_you_prefer">Select Ages You Prefer</string>
    <string name="_25_30">25-30</string>
    <string name="ages_you_prefer">Ages You Prefer</string>
    <string name="males">Males</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="test_text">Test Text</string>
    <string name="test_time">24min ago</string>
    <string name="new_message">New Message</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="notifications">Notifications</string>
    <string name="more_options">More Options</string>
    <string name="write_comment">Write Comment ...</string>
    <string name="start_chat_with_this_person">Start Chat with this Person</string>
    <string name="like_this_post">Like this post</string>
    <string name="new_feeds_tab">New</string>
    <string name="featured_feeds_tab">Featured</string>
    <string name="no_posts_yet">No Posts Yet!</string>
    <string name="title_activity_password_reset">PasswordReset</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="timeline">Timeline</string>
    <string name="all">All</string>
    <string name="_50">50%</string>
    <string name="treat_me">Treat Me</string>
    <string name="match_me">Match Me</string>
    <string name="search">Search</string>
</resources>
