<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_timeline"
        android:icon="@drawable/ic_timeline_nrml"
        android:title="@string/title_timeline" />

    <item
        android:id="@+id/navigation_nearby"
        android:icon="@drawable/ic_near_by_nrml"
        android:title="@string/title_nearby" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_nrml"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_nrml"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_nrml"
        android:title="@string/title_settings" />

</menu>
