<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="80dp"
    android:orientation="horizontal"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:baselineAligned="false">

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->

<!--        <de.hdodenhof.circleimageview.CircleImageView-->
<!--            android:id="@+id/chat_list_avatar"-->
<!--            android:padding="4sp"-->
<!--            android:layout_width="70dp"-->
<!--            android:layout_height="70dp"-->
<!--            android:src="@drawable/avatar"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:layout_marginStart="5dp"/>-->

<!--        <TextView-->
<!--            android:id="@+id/chat_list_name"-->
<!--            android:textSize="16sp"-->
<!--            android:layout_marginTop="12dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:text="@string/test_text"-->
<!--            android:fontFamily="@font/roboto"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_toEndOf="@id/chat_list_avatar"/>-->

<!--        <TextView-->
<!--            android:id="@+id/chat_list_message"-->
<!--            android:textSize="12sp"-->
<!--            android:ellipsize="end"-->
<!--            android:text="@string/test_text"-->
<!--            android:fontFamily="@font/roboto"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:layout_below="@id/chat_list_name"-->
<!--            android:layout_toEndOf="@id/chat_list_avatar"/>-->

<!--    </RelativeLayout>-->

<!--    <RelativeLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="50dp">-->



<!--    </RelativeLayout>-->

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/avatar"/>

        <TextView
            android:id="@+id/name"
            android:textSize="15sp"
            android:text="@string/test_text"
            android:layout_toEndOf="@id/image"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/message"
            android:textSize="12sp"
            android:text="@string/test_text"
            android:layout_marginStart="5dp"
            android:layout_below="@id/name"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/message_time"
            android:textSize="10sp"
            android:layout_marginTop="10dp"
            android:text="@string/test_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/is_message_read"
            android:textSize="13sp"
            android:layout_marginTop="11dp"
            android:layout_below="@id/message_time"
            android:textColor="@color/accent"
            android:text="@string/new_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="SmallSp" />

    </RelativeLayout>

</LinearLayout>