<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_height="match_parent"
                tools:viewBindingIgnore="false"
                android:layout_marginBottom="60dp"
                android:layout_width="match_parent">
    <ProgressBar
        android:id="@+id/nearby_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
                android:id="@+id/search_view"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="25dp"
                android:elevation="4dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:visibility="visible">

            <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                <ImageView
                        android:id="@+id/backImageView"
                        android:layout_width="0dp"
                        android:layout_weight=".15"
                        android:layout_marginLeft="6dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:padding="8dp"
                        android:tint="#707070"
                        android:src="@drawable/search_icon_nd" />

                <EditText
                        android:id="@+id/filterRestaurant"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/backImageView"
                        android:background="@android:color/transparent"
                        android:hint="Search Foods"
                        android:textColor="#404852"
                        android:imeOptions="actionSearch"
                        android:textColorHint="#a9a3a3"
                        android:singleLine="true"
                        android:layout_toLeftOf="@+id/closeImageView"
                        android:textSize="14sp"
                        android:layout_toEndOf="@+id/backImageView"
                        android:layout_toStartOf="@+id/closeImageView">
                    <requestFocus/>

                </EditText>

                <ImageView
                        android:id="@+id/closeImageView"
                        android:layout_width="0dp"
                        android:layout_weight=".15"
                        android:padding="8dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:tint="#707070"
                        android:visibility="invisible"
                        android:layout_alignParentRight="true"
                />

                <View
                        android:layout_width="2dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:background="#707070"
                        android:visibility="invisible" />

                <ImageView
                        android:id="@+id/filterImage"
                        android:layout_width="0dp"
                        android:layout_weight=".00"
                        android:padding="8dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="6dp"
                        android:layout_centerVertical="true"
                        android:tint="#707070"
                        android:visibility="invisible"

                        android:layout_alignParentRight="true"
                />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/filter_bar"
            android:gravity="center"
            android:layout_below="@id/search_view"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/type_all"
                app:cardElevation="4dp"
                app:cardCornerRadius="10dp"
                android:layout_width="55dp"
                android:layout_marginEnd="10dp"
                android:layout_height="40dp">

                <TextView
                    android:id="@+id/type_all_text"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/all" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/type_50"
                app:cardElevation="4dp"
                app:cardCornerRadius="10dp"
                android:layout_width="55dp"
                android:layout_marginEnd="10dp"
                android:layout_height="40dp">

                <TextView
                    android:id="@+id/type_50_text"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/_50" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/type_treat_me"
                app:cardElevation="4dp"
                app:cardCornerRadius="10dp"
                android:layout_width="75dp"
                android:layout_marginEnd="10dp"
                android:layout_height="40dp">

                <TextView
                    android:id="@+id/type_treat_me_text"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/treat_me" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/type_match_me"
                app:cardElevation="4dp"
                app:cardCornerRadius="10dp"
                android:layout_width="75dp"
                android:layout_marginEnd="10dp"
                android:layout_height="40dp">

                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/lock_paid"
                    android:text="@string/match_me" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_below="@id/filter_bar"
            android:name="foodie.app.rubikkube.foodie.ui.NearByFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="50dp"
            app:layoutManager="LinearLayoutManager"
            tools:context=".ui.nearby.NearByFragment"
            tools:listitem="@layout/fragment_near_by" />

    </RelativeLayout>
</RelativeLayout>
